alteracao paragrafo principal

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <div class="wrapper">
         <section class="container-left">
             <h1>Easy Shopping Via Mobile</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur 
-                adipisicing elit. Suscipit, architecto
-                asperiores, illum temporibus dicta aut 
-                nemo ipsam tenetur doloremque.</p>
+                <p>Lorem ipsum, dolor sit amet. Alteração para teste.</p>
             <button>Get Started</button>
         </section>
         <section class="container-right">
